--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "hugo --gc --minify -b $URL"
+  command = "hugo --gc --minify -b $URL/make"
   publish = "site/public"
   base = "site"
   
@@ -23,8 +23,8 @@
   ACCESS_TOKEN = "not so secret"
 
 [context.branch-deploy]
-  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
-  command = "make staging"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL/make staging"
+  
 [context.feature]
   command = "make feature"
 
