--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -58,8 +58,8 @@ time_format = "3:04 PM"
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "sharat.maruwada@mavs.uta.edu"
-phone = "817 235 6721"
+email = "sharat.maruwada@gmail.com"
+phone = "6827168879"
 address = "#301,400 KERBY ST, ARLINGTON, TX, 76013, USA"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
@@ -72,8 +72,8 @@ address = "#301,400 KERBY ST, ARLINGTON, TX, 76013, USA"
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "linkedin", icon_pack = "fab", name = "Keep Connecting", link = "https://www.linkedin.com/in/sharat-kumar-maruwada-655118191/"},
-  {icon = "twitter", icon_pack = "fab", name = "Tweet Me", link = "https://twitter.com/maruvadaitis"},
+  {icon = "linkedin", icon_pack = "fab", name = "Let's Connect!!", link = "https://www.linkedin.com/in/sharat-kumar-maruwada-655118191/"},
+  {icon = "twitter", icon_pack = "fab", name = "Tweet me Here!!", link = "https://twitter.com/maruvadaitis"},
  
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
   ]
