--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -59,7 +59,7 @@ time_format = "3:04 PM"
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "sharat.maruwada@gmail.com"
-phone = "6827168879"
+phone = "+1(682)-716-8879"
 address = "#301,400 KERBY ST, ARLINGTON, TX, 76013, USA"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
